--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,31 +3,24 @@ name: Docker Image CI
 on:
   push:
     branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
 
 jobs:
 
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      run: docker build . --file Dockerfile --tag demo2:$(date +%s)
       
     - uses: docker/login-action@v3
     - name: login in Docker hub
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
-        
-    - name: Pushing an image to Dockerhub
-    - uses: docker/build-push-action@v5
-    
-    
-    
-    
-    
 
+    - uses: docker/build-push-action@v5
+    - name: push the docker image
+      with:
+        image: yashasvi7/nodeapp
+        run: docker push image
