--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag demo2:$(date +%s)
+      run: docker build . --file Dockerfile --tag yashasvi7/nodeapp:$(date +%s)
       
     - uses: docker/login-action@v3
     - name: login in Docker hub
