--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,17 +11,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag yashasvi7/nodeapp:$(date +%s)
+      name: Build the Docker image
+      with:
+        run: docker build . --file Dockerfile --tag yashasvi7/nodeapp:$(date +%s)
       
     - uses: docker/login-action@v3
-    - name: login in Docker hub
+      name: login in Docker hub
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
+        run: docker login
 
     - uses: docker/build-push-action@v5
-    - name: push the docker image
+      name: push the docker image
       with:
         image: yashasvi7/nodeapp
         run: docker push image
