--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -4,26 +4,21 @@ on:
   push:
     branches: [ "master" ]
 
-
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-      name: Build the Docker image
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Build the Docker image
+      run: docker build . --file Dockerfile --tag yashasvi7/nodeapp:$(date +%s)
+
+    - name: Push the Docker image
+      uses: docker/build-push-action@v5
       with:
-        run: docker build . --file Dockerfile --tag yashasvi7/nodeapp:$(date +%s)
-      
-    - uses: docker/login-action@v3
-      name: login in Docker hub
-      with:
+        push: true
+        tags: yashasvi7/nodeapp:latest
+        registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        run: docker login
-
-    - uses: docker/build-push-action@v5
-      name: push the docker image
-      with:
-        image: yashasvi7/nodeapp
-        run: docker push image
