--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,11 +14,8 @@ jobs:
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag yashasvi7/nodeapp:$(date +%s)
 
+    - name: Log in to Docker Hub
+      run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login docker.io -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
     - name: Push the Docker image
-      uses: docker/build-push-action@v5
-      with:
-        push: true
-        tags: yashasvi7/nodeapp:latest
-        registry: docker.io
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+      run: docker push yashasvi7/nodeapp:latest
