--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -4,18 +4,26 @@ on:
   push:
     branches: [ "master" ]
 
+
 jobs:
+
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+    - uses: actions/checkout@v3
+      name: Build the Docker image
+      with:
+        run: docker build . --file Dockerfile --tag yashasvi7/nodeapp:$(date +%s)
+      
+    - uses: docker/login-action@v3
+      name: login in Docker hub
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+        run: docker login
 
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag yashasvi7/nodeapp:$(date +%s)
-
-    - name: Log in to Docker Hub
-      run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login docker.io -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-
-    - name: Push the Docker image
-      run: docker push yashasvi7/nodeapp:latest
+    - uses: docker/build-push-action@v5
+      name: push the docker image
+      with:
+        image: yashasvi7/nodeapp
+        run: docker push image
