--- a/.github/workflows/prtesting.yaml
+++ b/.github/workflows/prtesting.yaml
@@ -1,1 +1,21 @@
-s
+name: Creating Tag on PR Merge from main branch for specific repo 
+on:
+  pull_request:
+    types: [closed]
+
+jobs:
+  create_tag:
+    if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'common-lib' && github.event.pull_request.head.ref == 'main'
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up GitHub CLI
+        uses: actions/setup-gh-cli@v1
+
+      - name: Create Tag
+        run: |
+          TAG_NAME=v1.2.1
+          gh create $TAG_NAME
